# AYZENWORKSPACEX1

./: .replit  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md  requirements.txt
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  admin-api-bugs.md  artifact-workflow-port.md  express5-wildcard.md  pending-link-code.md  pgbouncer-asyncpg.md  proxy-body-order.md  python-optional-packages.md  telegram-bot-fixes.md  v4-admin-seed.md  v4-auth-pattern.md
apps/api/: main.py  requirements.txt
apps/api/.replit-artifact/: artifact.edit.toml  artifact.toml
apps/api/app/i18n/: bn.json  en.json
apps/api/app/jobs/: analytics_job.py  daily_digest.py  deadline_reminder.py  quiet_queue_job.py  stale_user_job.py
apps/api/app/middleware/: auth.py  rate_limiter.py
apps/api/app/routers/: accounts.py  activation.py  admin.py  gas.py  (+22 more)
apps/api/migrations/: 009_ayzen_bot.sql  010_ayzen_extended.sql  011_v4_features.sql
artifacts/api-server/.replit-artifact/: artifact.toml
artifacts/api-server/src/: app.ts  index.ts
artifacts/dashboard/: index.html
artifacts/dashboard/.replit-artifact/: artifact.toml
artifacts/dashboard/src/: App.tsx  index.css
artifacts/mockup-sandbox/.replit-artifact/: artifact.toml
attached_assets/: AYZEN_REPLIT_MEGA_PROMPT_(1)_1781641342098.md  AYZEN_Replit_Mega_Prompt_1781490620834.md  AYZEN_ULTIMATE_MEGA_PROMPT_1781652719408.md  AYZEN_WORKSPACE_MEGA_PROMPT_1781682863488.txt  AYZEN_WORKSPACE_V4_MEGA_PROMPT_1781672176948.md
lib/api-client-react/src/: custom-fetch.ts
lib/api-spec/: openapi.yaml
scripts/: build.sh
(+96 files in other folders)
